test/unit-tests/data-and-models/testData/sample_pickles/negativeSamples/11.pickle
version https://git-lfs.github.com/spec/v1
oid sha256:b01f7382fa4f0b5b26a96cfe1909341cd00bfd0bea5b4bf591b67640dc62af7d
size 4560251
